syntax = "proto3";

package v1.auth;

service AuthService {
    // unary API
    rpc Verify(VerificationRequest) returns (VerificationResponse) {}
}

message VerificationRequest{
    string token = 1;
}

message Profile{
    string userName = 1;
}

message VerificationResponse {
    int32 status = 1;  // 200 || 401
    Profile profile = 2;
}